# django-template

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/app/: settings.py
