[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Igor Petrov <igor@ipetrov.me>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
